[gd_scene load_steps=21 format=3 uid="uid://b35ls0vjqx87c"]

[ext_resource type="Script" path="res://scripts/enemies/enemy.gd" id="1_kx1gc"]
[ext_resource type="Texture2D" uid="uid://ctiwwgwgpgnjl" path="res://assets/Mushroom/Idle.png" id="1_wtuwc"]
[ext_resource type="Texture2D" uid="uid://4y0dohhedslk" path="res://assets/Mushroom/Attack.png" id="2_whduw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7mqxq"]
atlas = ExtResource("2_whduw")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fwb0"]
atlas = ExtResource("2_whduw")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqf8t"]
atlas = ExtResource("2_whduw")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3m2b"]
atlas = ExtResource("2_whduw")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4i1u"]
atlas = ExtResource("2_whduw")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ixsn"]
atlas = ExtResource("2_whduw")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t6u5"]
atlas = ExtResource("2_whduw")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylauw"]
atlas = ExtResource("2_whduw")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_03fau"]
atlas = ExtResource("1_wtuwc")
region = Rect2(0, 40, 149, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj8tc"]
atlas = ExtResource("1_wtuwc")
region = Rect2(149, 40, 149, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_yd6hh"]
atlas = ExtResource("1_wtuwc")
region = Rect2(298, 40, 149, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhgpj"]
atlas = ExtResource("1_wtuwc")
region = Rect2(447, 40, 149, 82)

[sub_resource type="SpriteFrames" id="SpriteFrames_kknko"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mqxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fwb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqf8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3m2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4i1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ixsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t6u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylauw")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_03fau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dj8tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd6hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhgpj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lmeyd"]
size = Vector2(25.5, 47.8125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mu21y"]
size = Vector2(249, 91)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bjrrf"]
size = Vector2(20, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bxowd"]
size = Vector2(32, 35)

[node name="Enemy" type="RigidBody2D"]
script = ExtResource("1_kx1gc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(483, 220.291)
scale = Vector2(1.18232, 1.35611)
sprite_frames = SubResource("SpriteFrames_kknko")
animation = &"idle"
frame_progress = 0.18573

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(485.75, 224.906)
shape = SubResource("RectangleShape2D_lmeyd")

[node name="AreaTriggerEnemy2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTriggerEnemy2D"]
position = Vector2(484, 214)
shape = SubResource("RectangleShape2D_mu21y")

[node name="Area2DHead" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="HeadCollisionShape2D" type="CollisionShape2D" parent="Area2DHead"]
position = Vector2(487, 204)
shape = SubResource("RectangleShape2D_bjrrf")

[node name="AreaDamagePlayer2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDamagePlayer2D"]
position = Vector2(486, 228.5)
shape = SubResource("RectangleShape2D_bxowd")

[connection signal="body_entered" from="AreaTriggerEnemy2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="AreaTriggerEnemy2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2DHead" to="." method="_on_area_2d_head_body_entered"]
[connection signal="body_exited" from="Area2DHead" to="." method="_on_area_2d_head_body_exited"]
[connection signal="body_entered" from="AreaDamagePlayer2D" to="." method="_on_area_damage_player_2d_body_entered"]
[connection signal="body_exited" from="AreaDamagePlayer2D" to="." method="_on_area_damage_player_2d_body_exited"]
